fix: adjust whitespace and chat dimensions

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ h1 {
   line-height: 1.1;
 }
 
+p {
+  font-size: 1.2em;
+}
+
 .header {
   background-color: #fff;
   border-radius: 8px;
@@ -59,7 +63,8 @@ h1 {
   display: flex;
   justify-content: center;
   place-items: center;
-  padding: 1.5em 8em 1.5em 6em;
+  padding: 1.2em 7em 1.2em 5em;
   user-select: none;
   white-space: nowrap;
+  margin-top: -200px;
 }
